--- a/css/xiaomi.css
+++ b/css/xiaomi.css
@@ -6,6 +6,32 @@
 .life-left{width: 234px;height: 440px;color: #fff;background: #333;background: rgba(0,0,0,0.6);padding-top: 20px;position: absolute;left: 0;top: 0;z-index: 2;}
 .life-left li a{width: 204px;height: 42px;line-height: 42px;display: block;font-size: 12px;color: #fff;padding-left:30px;}
 .life-left li a:hover{background:#ff6700;}
+.chirldren{display: none;}
+.life-left .life-item .chirldren{width: 992px; position: absolute; left: 234px;top: 0; z-index: 24; height: 458px; border: 1px solid #e0e0e0;background: #fff;}
+.life-left .life-item .chirldren-list{float: left;height: 458px; margin: 0; padding: 2px 0;width: 248px;}
+.life-left .life-item .chirldren-list li{position: relative;float: left;width: 265px;height: 76px;}
+.life-left .life-item .chirldren-list li a{display: block;padding: 18px 20px;line-height: 40px;color: #333;}
+.life-left .life-item .chirldren-list li img{margin-right: 12px;vertical-align: middle;width: 40px;height: 40px;display: inline;}
+.life-left .life-item .chirldren-list li .text{line-height: 40px;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .life-right{width:1226px;height: 460px;position: relative;}
 .life-right .Broadcast a{width:1226px;height: 460px;}
 .life-right .Broadcast img{width: 1226px;height: 460px;}
