--- a/css/register.css
+++ b/css/register.css
@@ -1,9 +1,9 @@
 @charset"utf-8";
-body{width: 100%;height: 100%;}
+body{width: 100%;height: 100%;background: #efefff;}
 
-#one{width: 855px;height: 548px;position: absolute;left: 293px;top: 60px;}
+#one{width: 855px;height: 548px;position: absolute;left: 293px;top: 60px;background: #fff;}
 canvas{width: 0;height: 0;}
-#one img{width: 48px;height: 48px;margin:0 auto;}
+#one .logo{width: 48px;height: 48px;margin:0 auto;}
 #one h2{margin-top:49px;font-size: 30px;color: #000;margin-bottom: 43px;margin-left: 338px;}
 form{width: 331px;height: 242px;position:absolute;left: 261px;}
 form p:first-of-type{margin-left:1px;color: #000;font-size: 12px;line-height: 12px;margin-bottom: 9px;}
@@ -13,3 +13,11 @@ form button{height: 40px;background: #fe6608;width: 289px;border: 1px solid #ea7
 #one i{position: absolute;bottom: 43px;font-size: 12px;color: #9c9c9c;margin-left:230px;}
 #one i a{color: #000;}
 
+.n-footer{height: 80px;width: 855px;position: absolute;left: 0px;top:558px;}
+.clearfix{width: 855px;height: 20px;}
+.select-list{width: 300px;margin:0 auto;}
+.select-list li{float: left;text-align: center;}
+.select-list li a{color: #333;font-size: 14px;line-height: 14px;margin:0 8px 0 8px;}
+.nf-intro{color: #9d9d9d;text-align: center;font-size: 12px;padding: 10px;}
+.nf-intro span img{width: 20px;height: 20px;display: inline;}
+.nf-intro span a{font-size: 12px;color: #9d9d9d;}
